Update login & register
