# swagger.yml
@@ -120,14 +120,15 @@ components:
     AuthResponse:
       type: object
       required:
-        - token
-        - user
+        - access
+        - refresh
       properties:
-        token:
+        access:
+          type: string
+          example: "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9..."
+        refresh:
           type: string
           example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
-        user:
-          $ref: '#/components/schemas/User'
     
     Message:
       type: object
